WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138746
URLs for some videos are not valid URLs, should not be exposed to action menu
https://bugs.webkit.org/show_bug.cgi?id=138746
Summary
URLs for some videos are not valid URLs, should not be exposed to action menu
Beth Dakin
Reported
2014-11-14 11:08:42 PST
URLs for some videos are not valid URLs, should not be exposed to action menu
rdar://problem/18941927
Attachments
Patch
(3.24 KB, patch)
2014-11-14 11:10 PST
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2014-11-14 11:10:36 PST
Created
attachment 241599
[details]
Patch
Beth Dakin
Comment 2
2014-11-14 11:13:22 PST
http://trac.webkit.org/changeset/176131
Thank you!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug