URLs for some videos are not valid URLs, should not be exposed to action menu https://bugs.webkit.org/show_bug.cgi?id=138746 -and corresponding- rdar://problem/18941927

Reviewed by Tim Horton.

If the video cannot be downloaded, that is also an indication that the URL of the
video will not be valid on its own. In these cases, we should share or copy the
main page’s URL.
* UIProcess/mac/WKActionMenuController.mm:
(-[WKActionMenuController _defaultMenuItemsForVideo]):
(-[WKActionMenuController _copyVideoURL:]):



Canonical link: https://commits.webkit.org/156590@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176131 268f45cc-cd09-0410-ab3c-d52691b4dbfc